# hack-ia-mockup

./: .editorconfig  .envrc  .gitignore  README.md  pyproject.toml
src/: agent.py  app.py  hack_ia_mockup.py  main.py
