[project]
name = "hack-ia-mockup"
version = "0.1.0"
description = "Mockup do projeto a ser desenvolvido durante a SEMAC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mangaba>=2.0.0",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]
